@@ -7,7 +7,7 @@
 # change 'tests => 1' to 'tests => last_test_to_print';
 #########################
 use Test::More;
-BEGIN { plan tests => 15 };
+BEGIN { plan tests => 19 };
 
 use Log::Log4perl;
 use Log::Log4perl::Appender::TestBuffer;
@@ -262,3 +262,61 @@ like(readwarn(), qr/looks suspicious: No loggers/,
 close STDERR;
 close IN;
 unlink $TMP_FILE;
+
+######################################################################
+# PatternLayout %m{}
+######################################################################
+Log::Log4perl::Appender::TestBuffer->reset();
+
+Log::Log4perl->init(\ <<EOT);
+log4j.logger.foo=DEBUG, A1
+log4j.appender.A1=Log::Log4perl::Appender::TestBuffer
+log4j.appender.A1.layout=org.apache.log4j.PatternLayout
+log4j.appender.A1.layout.ConversionPattern=%M%m
+EOT
+
+###########################################
+sub somefunc {
+###########################################
+    $logger = Log::Log4perl->get_logger("foo");
+    $logger->debug("Gurgel");
+}
+
+package SomePackage;
+###########################################
+sub somepackagefunc {
+###########################################
+    $logger = Log::Log4perl->get_logger("foo");
+    $logger->debug("Gurgel");
+}
+package main;
+
+somefunc();
+is(Log::Log4perl::Appender::TestBuffer->by_name("A1")->buffer(),
+        "main::somefuncGurgel", "%M main");
+
+Log::Log4perl::Appender::TestBuffer->by_name("A1")->buffer("");
+SomePackage::somepackagefunc();
+is(Log::Log4perl::Appender::TestBuffer->by_name("A1")->buffer(), 
+        "SomePackage::somepackagefuncGurgel", "%M in package");
+
+######################################################################
+# PatternLayout %m{1}
+######################################################################
+Log::Log4perl::Appender::TestBuffer->reset();
+
+Log::Log4perl->init(\ <<EOT);
+log4j.logger.foo=DEBUG, A1
+log4j.appender.A1=Log::Log4perl::Appender::TestBuffer
+log4j.appender.A1.layout=org.apache.log4j.PatternLayout
+log4j.appender.A1.layout.ConversionPattern=%M{1}%m
+EOT
+
+somefunc();
+is(Log::Log4perl::Appender::TestBuffer->by_name("A1")->buffer(),
+        "somefuncGurgel", "%M{1} main");
+
+Log::Log4perl::Appender::TestBuffer->by_name("A1")->buffer("");
+SomePackage::somepackagefunc();
+is(Log::Log4perl::Appender::TestBuffer->by_name("A1")->buffer(), 
+        "somepackagefuncGurgel", "%M{1} package");
